--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
   
 
   <link rel="manifest" href="https://phgduynguyen.github.io/index.webmanifest">
-  <link rel="icon" type="image/png" href="https://phgduynguyen.github.io/img/icon-32.png">
-  <link rel="apple-touch-icon" type="image/png" href="https://phgduynguyen.github.io/img/icon-192.png">
+  <link rel="icon" type="image/png" href="https://phgduynguyen.github.io/icon-32.png">
+  <link rel="apple-touch-icon" type="image/png" href="https://phgduynguyen.github.io/icon-192.png">
 
   <link rel="canonical" href="https://phgduynguyen.github.io/">
 
