--- a/index.html
+++ b/index.html
@@ -439,6 +439,8 @@
         <h3 itemprop="worksFor" itemscope itemtype="http://schema.org/Organization">
           <a href="https://www.en.ctu.edu.vn/" target="_blank" itemprop="url" rel="noopener">
           <span itemprop="name">Can Tho University</span>
+          </a> | <a href="https://www.vccimekong.com/vi" target="_blank" itemprop="url" rel="noopener">
+          <span itemprop="name">VCCI Mekong</span>
           </a>
         </h3>
         
@@ -779,7 +781,7 @@
   <li>Kept formal records of the workshop.</li>
   <li>Translated relevant documents (between English and Vietnamese).</li>
   <li>Supported and interpreted for group discussion sessions.</li>
-  <li>Prepared the <a href="phgduynguyen.github.io/Rise&Fall_WS Report.pdf">final report of workshop.</a></li>
+  <li>Prepared the <a href="https://phgduynguyen.github.io/Rise&Fall_WS%20Report.pdf">final report of workshop.</a></li>
   </ul>
 </div>
           </div>
