--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
 
         
         <h3 itemprop="worksFor" itemscope itemtype="http://schema.org/Organization">
-          <a href="https://www.en.ctu.edu.vn/" target="_blank" itemprop="url" rel="noopener">
+          <a href="https://www.ctu.edu.vn/" target="_blank" itemprop="url" rel="noopener">
           <span itemprop="name">Can Tho University</span>
           </a> | <a href="https://www.vccimekong.com/vi" target="_blank" itemprop="url" rel="noopener">
           <span itemprop="name">VCCI Mekong</span>
@@ -722,7 +722,7 @@
             </div>
             <h4 class="card-title exp-title text-muted mt-0 mb-1">Research Assistant</h4>
             <h4 class="card-title exp-company text-muted my-0">Department of Environmental & Resource Economics, School of Economics</h4>
-            <div class="card-text"><p>Agricultural, Environmental Economics Research. Advised by <a href="https://scholar.google.com/citations?user=IAG9CfgAAAAJ&hl=vi">Dr. Yen Dan Tong</a>.</p>
+            <div class="card-text"><p>Agricultural and Environmental Economics Research — Advised by <a href="https://scholar.google.com/citations?user=IAG9CfgAAAAJ&hl=vi">Dr. Yen Dan Tong</a>.</p>
 <p> Main Duties:</p>
 <ul>
   <li>Conducted and assisted in economic studies with concentration on food, agricultural, and environmental economics, policy analysis.</li>
@@ -781,7 +781,7 @@
   <li>Kept formal records of the workshop.</li>
   <li>Translated relevant documents (between English and Vietnamese).</li>
   <li>Supported and interpreted for group discussion sessions.</li>
-  <li>Prepared the <a href="https://phgduynguyen.github.io/Rise&Fall_WS%20Report.pdf">final report of workshop.</a></li>
+  <li>Prepared <a href="https://phgduynguyen.github.io/Rise&Fall_WS%20Report.pdf">the final report of workshop.</a></li>
   </ul>
 </div>
           </div>
@@ -839,12 +839,12 @@
     </div>
     <div class="col-12 col-lg-8">
 
-<h3 id="vsss-scholarship">Recipient, Vietnam School of Science Scholarship</h3>
+<h3 id="vsss-scholarship">Recipient, <a href="https://www.truonghekhoahoc.com/2020/">Vietnam School of Science</a> Scholarship</h3>
 <ul>
 <li>Year: 2019.</li>
 <li>Recognising the excellent performance and participation in the 7th Vietnam School of Science held at Quy Nhon International Center for Interdisciplinary Science and Education (ICISE), Vietnam.</li>
 </ul>      
-<h3 id="ctudeanlist">Excellent Student, Can Tho University - Dean’s List Scholarship</h3>
+      <h3 id="ctudeanlist">Excellent Student, <a href="https://www.ctu.edu.vn/">Can Tho University</a> - Dean’s List Scholarship</h3>
 <ul>
 <li>Academic Year: 2016/2017.</li>
 <li>Nominated as one of two best undergraduate students in Natural Resources Economics, based on performance indicated by GPA and extracurricular activities.</li>
@@ -855,10 +855,7 @@
 </div>
 
     </div>
-  </section>
-
-  
-  
+  </section>  
   
 
   
