--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
     <h1>Biography</h1>
 
     <p>I am Phuong-Duy Nguyen (Jeffrey). I received my B.A. (major in Natural Resources Economics) from Can Tho University, Vietnam in 2018. I then worked as a research assistant at Department of Environmental & Resource Economics, School of Economics, Can Tho University for more than three years. During this period, I have gained a special attraction to agricultural, environmental economics, and their applications on assessing development policies in the changing Mekong Delta of Vietnam.<p>
-<p>From May 2021, I started working at VCCI - Can Tho Branch as a project associate.<p>
+<p>From May 2021, I started working at Vietnam Chamber of Commerce and Industry - Can Tho Branch as a project associate.<p>
 
     <div class="row">
 
@@ -668,18 +668,18 @@
               </div>
               <div class="text-right">
                 
-                  Vietnam Chamber of Commerce and Industry - Branch in Can Tho, Vietnam
+                  VCCI - Branch in Can Tho, Vietnam
                 
               </div>
             </div>
             <h4 class="card-title exp-title text-muted mt-0 mb-1">Project Associate</h4>
             <h4 class="card-title exp-company text-muted my-0">Department of Trade - Investment Promotion and Entrepreneurship</h4>
-            <div class="card-text"><p>Climate Change and Business Resilience.</p>
-<p>Main duties:</p>
+            <div class="card-text"><p>Climate Change and Resilience for Businesses.</p>
+<p>Main Duties:</p>
   <ul>
-    <li>Contributed in forming the Resilient Businesses Network for the Mekong Delta.</li>
-    <li>Researched on the impacts of climate change on businesses in the Mekong Delta of Vietnam.</li>
-    <li>Assisted in promotion and entrepreneurship activities.</li>
+    <li>Contributed in forming the Mekong Delta Resilient Businesses Network.</li>
+    <li>Researched on the impacts of climate change (saline intrusion) on businesses in the Mekong Delta of Vietnam.</li>
+    <li>Assisted in trade - investment promotion and entrepreneurship activities.</li>
   </ul>
 </div>
           </div>
