--- a/index.html
+++ b/index.html
@@ -632,10 +632,10 @@
             </div>
             <h4 class="card-title exp-title text-muted mt-0 mb-1">Project Associate</h4>
             <h4 class="card-title exp-company text-muted my-0">Department of Trade - Investment Promotion and Entrepreneurship</h4>
-            <div class="card-text"><p>Climate Change and Resilience for Businesses.</p>
+            <div class="card-text"><p>Climate Change and Resilience Capacity for Businesses.</p>
 <p>Main Duties:</p>
   <ul>
-    <li>Contributed in forming the Mekong Delta Resilient Business Network (MRBN).</li>
+    <li>Contributed in forming the Mekong Delta Resilient Business Network (MRBN) funded by The Asia Foundation and UPS Foundation.</li>
     <li>Researched on the impacts of climate change (saline intrusion and drought) on businesses in the Mekong Delta of Vietnam.</li>
     <li>Assisted in trade - investment promotion and entrepreneurship activities.</li>
   </ul>
