--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
 
     <p>I have a huge motivation to work in the field of development studies. The way human actions impact the environment and agro-ecosystem, and vice versa has always interested me. After completing the Bachelor's program, I recognized the need to go deeper into the nexus of agriculture-human-environment and economic instruments for shaping relevant policies.<p>
 <p>I spent 3 years working as a research assistant at School of Economics, Can Tho University before I join in Vietnam Chamber of Commerce and Industry - Can Tho Branch as an associate for the project building the Mekong Delta Resilient Business Network towards climate change.<p>
-<p>For further information about my background, please refer to <a href="https://phgduynguyen.github.io/cv.pdf"> the Curriculum Vitae (Updated at June 11, 2021).</a> <p>
+<p>For further information about my background, please refer to <a href="https://phgduynguyen.github.io/cv.pdf"> the Curriculum Vitae (Updated at July 29, 2021).</a> <p>
     <div class="row">
 
       
@@ -635,9 +635,11 @@
             <div class="card-text"><p>Climate Change and Resilience Capacity for Businesses.</p>
 <p>Main Duties:</p>
   <ul>
-    <li>Contributed in forming the Mekong Delta Resilient Business Network (MRBN) funded by The Asia Foundation and UPS Foundation.</li>
-    <li>Researched on the impacts of climate change (saline intrusion and drought) on businesses in the Mekong Delta of Vietnam.</li>
-    <li>Assisted in trade - investment promotion and entrepreneurship activities.</li>
+    <li>Worked under the Mekong Delta Resilient Business Network (MRBN) funded by UPS Foundation and The Asia Foundation.</li>
+    <li>Did research into climate change's impacts (focus on saline intrusion and drought) on businesses in the Vietnamese Mekong Delta.</li>
+    <li>Worked towards building the resilience and disaster management practices for businesses of the Vietnamese Mekong Delta.</li>
+    <li>Managed and organized relevant workshops.</li>
+    <li>Assisted in trade-investment promotion and entrepreneurship activities.</li>
   </ul>
 </div>
           </div>
@@ -1155,7 +1157,7 @@
               </div>
             </div>
             <h4 class="card-title exp-title text-muted mt-0 mb-1">COVID-19 microdata on urban travel behavior in Vietnam – a unique contribution to the measurement and mitigation of greenhouse gas emissions</h4>
-            <h4 class="card-title exp-company text-muted my-0">Manuscript submitted to Transport Research Part F: Traffic Psychology and Behaviour</h4>
+            <h4 class="card-title exp-company text-muted my-0">Manuscript submitted to Transport Policy</h4>
             <div class="card-text">Authors: Tong YD, Mancuso-Tradenta J, <a href="https://scholar.google.com/citations?user=vejpIqsAAAAJ&hl=vi">Nguyen PD</a>, An-Vo DA, Nguyen VN and Tran TAD<br/>
               <p></p>
               <p>Abstract: We innovatively extracted the data from COVID-19-related epidemiological investigations to examine the potential of those options for GHG emissions savings in a developing country context, Vietnam. We discovered that active travel (walking, cycling) has a huge potential to replace short motorcycle trips. With 65% of all motorcycle trips were less than 3 miles in duration, the substitution will create a significant impacts on carbon emissions from personal travel. Realistically, active travel can replace 62% of short motorcycle trips if considering travel patterns and constraints. It saves 18% of GHG emissions from motorized transport. In the scenario of active travel further replaces all shopping trips normally done by motorcycles, this climbed to 84% of short trips, equivalent to 22% of GHG emissions reduction from motorcycles. On the other hand, almost 2% to 9% of GHG emissions will be cut down if working from home from one to five days a week.</p>
@@ -1256,7 +1258,7 @@
   
 
   <p class="powered-by">
-    © 2020 Guan-Shiuan Kuo  &middot; 
+    © 2021 Phuong-Duy Nguyen  &middot; 
 
     Powered by the
     <a href="https://sourcethemes.com/academic/" target="_blank" rel="noopener">Academic theme</a> for
