--- a/index.html
+++ b/index.html
@@ -679,7 +679,7 @@
                 
               </div>
             </div>
-            <h4 class="card-title exp-title text-muted mt-0 mb-1">Research Assistant</h4>
+            <h4 class="card-title exp-title text-muted mt-0 mb-1">Research Associate</h4>
             <h4 class="card-title exp-company text-muted my-0">Department of Environmental & Resource Economics, School of Economics</h4>
             <div class="card-text"><p>Agricultural and Environmental Economics Research — Advised by <a href="https://scholar.google.com/citations?user=IAG9CfgAAAAJ&hl=vi">Dr. Yen Dan Tong</a>.</p>
 <p> Main Duties:</p>
