--- a/index.html
+++ b/index.html
@@ -798,10 +798,16 @@
     </div>
     <div class="col-12 col-lg-8">
 
-<h3 id="vsss-scholarship">Recipient, <a href="https://www.truonghekhoahoc.com/2020/">Vietnam School of Science</a> Scholarship</h3>
+      
+      <h3 id="vssd-scholarship">Recipient, <a href="https://www.vssd.vn/">Vietnam Summer School in Development</a> Scholarship</h3>
+<ul>
+<li>Year: 2021.</li>
+<li>Recognising the excellent performance and participation in the 2th Vietnam Summer School in Development held at Quy Nhon International Center for Interdisciplinary Science and Education (ICISE), Vietnam.</li>
+</ul> 
+      <h3 id="vsss-scholarship">Recipient, <a href="https://www.truonghekhoahoc.com/2020/">Vietnam School of Science</a> Scholarship</h3>
 <ul>
 <li>Year: 2019.</li>
-<li>Recognising the excellent performance and participation in the 7th Vietnam School of Science held at Quy Nhon International Center for Interdisciplinary Science and Education (ICISE), Vietnam.</li>
+<li>Recognising the excellent performance and participation in the 7th Vietnam School of Science held at ICISE Quy Nhon, Vietnam.</li>
 </ul>      
       <h3 id="ctudeanlist">Excellent Student, <a href="https://www.ctu.edu.vn/">Can Tho University</a> - Dean’s List Scholarship</h3>
 <ul>
