--- a/index.html
+++ b/index.html
@@ -802,7 +802,7 @@
       <h3 id="vssd-scholarship">Recipient, <a href="https://www.vssd.vn/">Vietnam Summer School in Development</a> Scholarship</h3>
 <ul>
 <li>Year: 2021.</li>
-<li>Recognising the excellent performance and participation in the 2th Vietnam Summer School in Development held at Quy Nhon International Center for Interdisciplinary Science and Education (ICISE), Vietnam.</li>
+<li>Recognising the excellent performance and participation in the 2nd Vietnam Summer School in Development held at International Center for Interdisciplinary Science and Education (ICISE) Quy Nhon, Vietnam.</li>
 </ul> 
       <h3 id="vsss-scholarship">Recipient, <a href="https://www.truonghekhoahoc.com/2020/">Vietnam School of Science</a> Scholarship</h3>
 <ul>
