--- a/index.html
+++ b/index.html
@@ -770,15 +770,38 @@
   
 
   
-  
+  <section id="training" class="home-section wg-blank   "  >
+    <div class="container">
 
   
+  <div class="row">
   
+    <div class="col-12 col-lg-4 section-heading">
+      <h1>Trainings</h1>
+      
+    </div>
+    <div class="col-12 col-lg-8">
   
 
+  <h3 id="vsss">Vietnam School of Science (VSS), 2019</h3>
+<ul>
+<li>Held at International Centre for Interdisciplinary Science and Education</li>
+<li>The VSS aims at inspiring and supporting young Vietnamese generations (including young higher-education academics, young researchers, and students) who are potential and/or keen as well as full of passions on pursuing research as a career.</li>
+<li>The VSS is held annually on the basis of purely academic and non-profit activities. The lectures given at the summer school will cover essentials of science, research skills as well as selected studies in natural, technical, social, and economic fields.</li>
+</ul> 
+      
+  <h3 id="vsss">Vietnam School of Science (VSS), 2019</h3>
+<ul>
+<li></li>
+<li></li>
+</ul>  
   
+  </div>
   
-  
+</div>
+
+    </div>
+  </section>  
   
   
 
