--- a/index.html
+++ b/index.html
@@ -966,7 +966,7 @@
             <h4 class="card-title exp-title text-muted mt-0 mb-1">Evaluate the recording and keeping information according to Global GAP standards of black tiger shrimp farms (Penaeus monodon) in Ca Mau province</h4>
             <h4 class="card-title exp-company text-muted my-0">Can Tho University Journal of Science (Vietnamese), Vol. 55, No. 2D, pp. 115-121</h4>
             <div class="card-text">Authors: Khuu TPD, Tong YD and <a href="https://scholar.google.com/citations?user=vejpIqsAAAAJ&hl=vi">PD Nguyen</a><br/>
-<p>Full Text @ <a href="https://sj.ctu.edu.vn/ql/docgia/tacgia-5292/baibao-58524.html">DOI:10.22144/ctu.jvn.2019.054</a></p>
+<p>Full Text @ <a href="https://ctujsvn.ctu.edu.vn/index.php/ctujsvn/article/view/3232">DOI:10.22144/ctu.jvn.2019.054</a></p>
 <p>Abstract: This study aims to assess the information recording and keeping activities based on the framework of Global GAP standards. An investigation was conducted on 85 black tiger shrimp (Penaeus monodon) farms in Dam Doi district, Cai Nuoc district and Ca Mau city (Ca Mau province). Descriptive statistics and independent samples T-test were employed to analyse and compare the differences in financial efficiency between farms with and without information management. The main results were summarised as follows: Despite the fact that Global GAP was an essential certificate to meet the requirement of global markets, shrimp farmers in Ca Mau did not pay much attention to its criteria, especially the criteria of recording and keeping information in order to satisfy  the traceability requirements. The information management activities enhanced the farm efficiency of shrimp farms based on the comparison’s results of financial indices between shrimp farms with and without information management. The results of this study were considered to emphaisize the necessity of the Global GAP standards application for local shrimp farms.</p>              
             </div>
           </div>
@@ -1007,7 +1007,7 @@
             <h4 class="card-title exp-title text-muted mt-0 mb-1">Valuing health risk due to pesticides use in agricultural production in Tam Binh district, Vinh Long province: A choice experiment approach</h4>
             <h4 class="card-title exp-company text-muted my-0">Can Tho University Journal of Science (Vietnamese), Vol. 54, No. 7D, pp. 164-171</h4>
             <div class="card-text">Authors: <a href="https://scholar.google.com/citations?user=vejpIqsAAAAJ&hl=vi">PD Nguyen</a> and Tong YD<br/>
-<p>Full Text @ <a href="https://sj.ctu.edu.vn/ql/docgia/tacgia-57077/baibao-54623/doi-ctu.jvn.2018.153.html">DOI:10.22144/ctu.jvn.2018.153</a></p>
+<p>Full Text @ <a href="https://ctujsvn.ctu.edu.vn/index.php/ctujsvn/article/view/3041">DOI:10.22144/ctu.jvn.2018.153</a></p>
 <p>Abstract: The choice experiment method was used to investigate farmers’ valuations of health risk changes associated with pesticide use. 90 rice-cultivated households were surveyed in Tam Binh District, Vinh Long Province. Results show that all included attributes are significant factors to determine farmers’ valuation. They are related to the application of pesticides in production with differences in information about health consequences, baseline risk, scale of risk reduction as well as increase in annual production costs.</p>
             </div>
           </div>
@@ -1070,7 +1070,7 @@
               </div>
             </div>
             <h4 class="card-title exp-title text-muted mt-0 mb-1">Gender wage disparity: The role of educational improvement and diversifying labour market in Vietnam</h4>
-            <h4 class="card-title exp-company text-muted my-0">Manuscript submitted to Int'l Sympoium: The Role of Vietnamese Young Intellectuals in the 4.0 Era</h4>
+            <h4 class="card-title exp-company text-muted my-0">Accepted Paper for Int'l Sympoium: The Role of Vietnamese Young Intellectuals in the 4.0 Era</h4>
             <div class="card-text">Authors: Nguyen DD, <a href="https://scholar.google.com/citations?user=vejpIqsAAAAJ&hl=vi">Nguyen PD</a> and Nguyen HT<br/>
 <p>Pre-Print @ <a href="https://www.researchgate.net/publication/351096819?channel=doi&linkId=608666bb2fb9097c0c0cf41c&showFulltext=true">DOI:10.13140/RG.2.2.33835.98089</a></p>
 <p>Abstract: Using the VHLSS data in 2008 and 2016, we want to estimate the gender wage dis-parity in the formal sector of Vietnam, especially looking for the impacts of education and private ﬁrms on such a gap. Under the unconditional quantile regression (UQR) method, we found that the education and private companies support females, and males have higher-paid jobs. Besides, the OB decomposition approach conﬁrms that women signiﬁcantly earned less than men, especially along the higher deciles of the distribution. Our econometrics method also ﬁnds the statistically dominant role of discrimination. However, we cannot ﬁnd any signiﬁcant contributions of education and private ﬁrms to the discrimination part.</p>              
@@ -1110,7 +1110,7 @@
               </div>
             </div>
             <h4 class="card-title exp-title text-muted mt-0 mb-1">Consumer responses towards non-GM food: Evidence from experimental auctions in Vietnam</h4>
-            <h4 class="card-title exp-company text-muted my-0">Manuscript submitted to International Food Research Journal</h4>
+            <h4 class="card-title exp-company text-muted my-0">Manuscript submitted to International Journal of Food and Agricultural Economics</h4>
             <div class="card-text">Authors: Tong YD, Khuu TPD, Toan TD, <a href="https://scholar.google.com/citations?user=vejpIqsAAAAJ&hl=vi">Nguyen PD</a> and Pham N<br/>
               <p></p>
               <p>Abstract: This study aimed to investigate the point of view of consumers in developing and emerging market about the genetically modified and non-genetically modified food based on the evidence from soymilk non-genetically modified product. The experimental auction method was employed to explicit the willingness-to-pay of Vietnamese consumers for a non-genetically modified soymilk products. Regression analysis was applied to determine factors influencing consumer's WTP for non-genetically modified product. The results indicated that consumers are willing to pay 84% premium for soy milk with non-genetically modified attribute information in comparison with the conventional one. The level of WTP derived from the auction is not much different from the market price of the product being auctioned. Notably, consumers with high level of risk aversion were likely to purchase non-genetically modified food. This was a predominant factor that determines who would accept or deny the consumption of non-genetically modified food.</p>              
@@ -1150,7 +1150,7 @@
               </div>
             </div>
             <h4 class="card-title exp-title text-muted mt-0 mb-1">COVID-19 microdata on urban travel behavior in Vietnam – a unique contribution to the measurement and mitigation of greenhouse gas emissions</h4>
-            <h4 class="card-title exp-company text-muted my-0">Manuscript submitted to Transport Policy</h4>
+            <h4 class="card-title exp-company text-muted my-0">Manuscript submitted to Case Studies on Transport Policy</h4>
             <div class="card-text">Authors: Tong YD, Mancuso-Tradenta J, <a href="https://scholar.google.com/citations?user=vejpIqsAAAAJ&hl=vi">Nguyen PD</a>, An-Vo DA, Nguyen VN and Tran TAD<br/>
               <p></p>
               <p>Abstract: We innovatively extracted the data from COVID-19-related epidemiological investigations to examine the potential of those options for GHG emissions savings in a developing country context, Vietnam. We discovered that active travel (walking, cycling) has a huge potential to replace short motorcycle trips. With 65% of all motorcycle trips were less than 3 miles in duration, the substitution will create a significant impacts on carbon emissions from personal travel. Realistically, active travel can replace 62% of short motorcycle trips if considering travel patterns and constraints. It saves 18% of GHG emissions from motorized transport. In the scenario of active travel further replaces all shopping trips normally done by motorcycles, this climbed to 84% of short trips, equivalent to 22% of GHG emissions reduction from motorcycles. On the other hand, almost 2% to 9% of GHG emissions will be cut down if working from home from one to five days a week.</p>
