--- a/index.html
+++ b/index.html
@@ -428,14 +428,7 @@
 
       <div class="portrait-title">
         <h2 itemprop="name">Phuong-Duy Nguyen</h2>
-        <h3 itemprop="jobTitle">Research Associate</h3>
-
-        
-        <h3 itemprop="worksFor" itemscope itemtype="http://schema.org/Organization">
-          <a href="https://www.ce.ctu.edu.vn/" target="_blank" itemprop="url" rel="noopener">
-            <span itemprop="name">School of Economics, Can Tho University</span>
-          </a>
-        </h3>
+        <h3 itemprop="jobTitle">Independent Researcher</h3>
         
       </div>
 
