--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
     
     <h1>Biography</h1>
 
-    <p>Xin chào (Hi)! I’m Phuong-Duy (Jeff/芳維), an independent researcher from Can Tho (Vietnam). I have a huge motivation to work in the field of development studies and community projects. The way human actions impact the environment and ecosystem, and vice versa has always interested me. This has motivated me to go deeper into the nexus of agriculture-human-environment and economic instruments for shaping relevant policies. As a researcher of environmental economics, I have learned that the principles and tools of valuation enable the study of the "true value" of  resources, elements of life that exist within our cities, our community, and so we may improve their sustainability.<p>
+    <p>Xin chào (Hi)! I’m Phuong-Duy (Jeff/芳維), an independent researcher from Vietnam. I have a huge motivation to work in the field of development studies and community projects. The way human actions impact the environment and ecosystem, and vice versa has always interested me. This has motivated me to go deeper into the nexus of agriculture-human-environment and economic instruments for shaping relevant policies. As a researcher of environmental economics, I have learned that the principles and tools of valuation enable the study of the "true value" of  resources, elements of life that exist within our cities, our community, and so we may improve their sustainability.<p>
 <p>For further information about my background, please refer to my <a href="https://phgduynguyen.github.io/cv.pdf"> Curriculum Vitae.</a> <p>
     <div class="row">
 
@@ -655,7 +655,7 @@
                 
               </div>
             </div>
-            <h4 class="card-title exp-title text-muted mt-0 mb-1">Research Associate</h4>
+            <h4 class="card-title exp-title text-muted mt-0 mb-1">Research Assistant</h4>
             <h4 class="card-title exp-company text-muted my-0">Department of Environmental & Resource Economics, School of Economics</h4>
             <div class="card-text"><p>Agricultural and Environmental Economics Research — Advised by <a href="https://scholar.google.com/citations?user=IAG9CfgAAAAJ&hl=vi">Dr. Yen Dan Tong</a>.</p>
 <p> Main Duties:</p>
