--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
 
       <div class="portrait-title">
         <h2 itemprop="name">Phuong-Duy Nguyen</h2>
-        <h3 itemprop="jobTitle">Researcher (Economics | Urban Studies)</h3>
-        <h2 itemprop="workplace">Can Tho Institute for Socio-Economic Development Studies (CISED)</h2>
+        <h3 itemprop="jobTitle">Researcher</h3>
+        <h4 itemprop="workplace">Can Tho Institute for Socio-Economic Development Studies (CISED)</h4>
       </div>
 
       <link itemprop="url" href="">
@@ -692,7 +692,7 @@
           <div class="card-body">
             <div class="float-right text-muted exp-meta">
               <div class="text-right">
-                2021
+                TBA
                 
               </div>
               <div class="text-right">
@@ -733,7 +733,7 @@
           <div class="card-body">
             <div class="float-right text-muted exp-meta">
               <div class="text-right">
-                2021
+                TBA
                 
               </div>
               <div class="text-right">
