--- a/index.html
+++ b/index.html
@@ -322,7 +322,8 @@
     </div>
     <div class="col-12 col-lg-8">
 
-
+      <h2> Needs assessment report - business resilience and climate adapation </h2>
+      <img src="https://phgduynguyen.github.io/baocaonhucau.jpg"  alt="Needs Assessment Report">
 
 
 
