--- a/index.html
+++ b/index.html
@@ -329,9 +329,13 @@
       <img src="https://phgduynguyen.github.io/baocaohanman.png"  alt="Business Report">
 
       <h3> Research Article: "Potential for greenhouse gas (GHG) emissions savings from replacing short motorcycle trips with active travel modes in Vietnam" </h3>
-      <img src="https://phgduynguyen.github.io/transportation.PNG"  alt="Business Report">
+      <img src="https://phgduynguyen.github.io/transportation.PNG"  alt="Transportation">
 
-      
+      <h3> Research Article: "Are Consumers Willing to Pay More for Traceability? Evidence from an Auction Experiment of Vietnamese Pork" </h3>
+      <img src="https://phgduynguyen.github.io/porkpaper.PNG"  alt="Traceable Pork WTP">
+
+      <h3> Project: Mekong Delta Plastic Pond Liner Conversion </h3>
+      <img src="https://phgduynguyen.github.io/pondliner.png"  alt="Pond Liner Conversion">
       
     </div>
   
