--- a/index.html
+++ b/index.html
@@ -336,7 +336,16 @@
 
       <h3> Project: Mekong Delta Plastic Pond Liner Conversion </h3>
       <img src="https://phgduynguyen.github.io/pondliner.png"  alt="Pond Liner Conversion">
-      
+
+      <h3> Report: Policy Recommendations - Mekong Connect 2022  </h3>
+      <img src="https://phgduynguyen.github.io/mekongconnect.png"  alt="Mekong Connect">
+
+      <h3> Project: Department and District Competitiveness Index (DDCI) - Can Tho  </h3>
+      <img src="https://phgduynguyen.github.io/ddci2023.png"  alt="DDCI Can Tho">
+
+      <h3> Project: Preserving the cultural values of Cai Rang floating market </h3>
+      <img src="https://phgduynguyen.github.io/chonoicairang.png"  alt="Cai Rang floating market">
+     
     </div>
   
 </div>
