--- a/index.html
+++ b/index.html
@@ -367,10 +367,20 @@
     <div class="col-12 col-lg-8">
 
 
+      <h2> Field trips - Australian Alumni Grants Fund Project </h2>
+      <img src="https://phgduynguyen.github.io/aagfwetmarket.jpg"  alt="AAGF1">
+      <img src="https://phgduynguyen.github.io/aagfchild.jpg"  alt="AAGF2">
+
+      <h2> Training Course - ISO 22301 Disaster Risk Prevention & Business Continuity Planning </h2>
+      <img src="https://phgduynguyen.github.io/isovcci.jpg"  alt="ISO">
+
+      <h2> Summer Schools - Vietnam School of Science / Vietnam School of Development </h2>
+      <img src="https://phgduynguyen.github.io/vsss7.jpg"  alt="VSSS">
+      <img src="https://phgduynguyen.github.io/vsod.jpg"  alt="VSOD">
+      <img src="https://phgduynguyen.github.io/vssd1.jpg"  alt="VSSD">
 
 
       
-
     </div>
   
 </div>
