--- a/index.html
+++ b/index.html
@@ -326,13 +326,13 @@
     </div>
     <div class="col-12 col-lg-8">
 
-      <h3> Research Article: "Potential for greenhouse gas (GHG) emissions savings from replacing short motorcycle trips with active travel modes in Vietnam" </h3>
+      <h3> Research Article: <a href="https://link.springer.com/article/10.1007/s11116-023-10394-0">"Potential for greenhouse gas (GHG) emissions savings from replacing short motorcycle trips with active travel modes in Vietnam"</a> </h3>
       <img src="https://phgduynguyen.github.io/transportation.PNG"  alt="Transportation">
      
-      <h3> Needs Assessment Report: Business Resilience & Climate Adapation </h3>
+      <h3> Needs Assessment Report: Business Resilience & Climate Adapation (VCCI Can Tho & The Asia Foundation) </h3>
       <img src="https://phgduynguyen.github.io/baocaonhucau.jpg"  alt="Needs Assessment Report">
 
-      <h3> Report: Impacts of Saline Intrusion & Drought on the Vietnamese Mekong Delta's Businesses </h3>
+      <h3> Report: <a href="https://www.researchgate.net/publication/370215816_BAO_CAO_TAC_DONG_CUA_HAN_MAN_DEN_DOANH_NGHIEP_VUNG_DONG_BANG_SONG_CUU_LONG_REPORT_ON_IMPACTS_OF_SALINE_INTRUSION_AND_DROUGHT_ON_THE_VIETNAMESE_MEKONG_DELTA'S_BUSINESSES">"Impacts of Saline Intrusion & Drought on the Vietnamese Mekong Delta's Businesses</a> </h3>
       <img src="https://phgduynguyen.github.io/baocaohanman.png"  alt="Business Report">
 
       <h3> Report: Policy Recommendations - Mekong Connect 2022  </h3>
@@ -376,7 +376,7 @@
 
       <h2> Summer Schools - Vietnam School of Science / Vietnam School of Development </h2>
       <img src="https://phgduynguyen.github.io/vsss7.jpg"  alt="VSSS">
-      <img src="https://phgduynguyen.github.io/vsod.jpg"  alt="VSOD">
+      <img src="https://phgduynguyen.github.io/vsod.png"  alt="VSOD">
       <img src="https://phgduynguyen.github.io/vssd1.jpg"  alt="VSSD">
 
 
