--- a/index.html
+++ b/index.html
@@ -280,13 +280,13 @@
 <li>Provide technical support and advice on procedures, implementation processe for relevant projects.</li>
 </ul>
       
-      <h3 id="coordinator">Project Coordinator, <a href="http://www.mekongenvironmentforum.org/">Mekong Environment Forum</a>, Vietnam</h3>
+      <h3 id="coordinator">Project Coordinator, <a href="https://mekongenvironment.org/vi/trang-chu/">Mekong Environment Forum</a>, Vietnam</h3>
 <ul>
 <li>Period: February 2022 - April 2022.</li>
 <li>Main duties: Develop implementation plan for project; Conduct field trips and Work with local partners.</li>
 </ul> 
       
-      <h3 id="projectassociate">Project Associate, <a href="vccimekong.com/vi">Vietnam Chamber of Commerce and Industry - Branch in Can Tho</a>, Vietnam</h3>
+      <h3 id="projectassociate">Project Associate, <a href="https://vccimekong.com.vn/vi">Vietnam Chamber of Commerce and Industry - Branch in Can Tho</a>, Vietnam</h3>
 <ul>
 <li>Period: May 2021 - December 2021.</li>
 <li>Main duties: Develop the Mekong Delta Resilient Business Network (MRBN), and Conduct research into climate change's impacts on the Vietnamese Mekong Delta's businesses.</li>
