--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
     <h1>Biography</h1>
 
     <p>Xin chào (Hi)! My name is P-Duy. I am working as a research associate at Can Tho Institute for Socio-Economic Development Studies (Vietnam). I have a huge motivation to work in the field of development and urban studies. The way human actions impact the environment and ecosystem, and vice versa, has always interested me. This has motivated me to go deeper into the nexus of agriculture-human-environment and economic instruments for shaping relevant policies. As a researcher of environmental economics, I have learned that the principles and tools of valuation enable the study of the "true value" of  resources, elements of life that exist within our cities, our community, and so we may improve their sustainability.<p>
-<p>For more information about my background, please refer to my <a href="https://phgduynguyen.github.io/cv.pdf"> Curriculum Vitae or E-mail: phgduy.nguyen@gmail.com.</a> <p>
+<p>For more information about my background, please refer to my <a href="https://phgduynguyen.github.io/cv.pdf"> Curriculum Vitae </a> or E-mail: phgduy.nguyen@gmail.com. <p>
     <div class="row">
 
       
